# kpubdata-builder

./: .gitignore  AGENTS.md  ALGORITHM.md  API_CONTRACT.md  ARCHITECTURE.md  BOUNDARY.md  BUILD_SPEC.md  BUILD_STATE.md  CHANGELOG.md  CONTRIBUTING.md  DATA_FRESHNESS.md  DOMAIN_MODEL.md  EXPORT_MODEL.md  FEATURE_FLOWS.md  PLAN.md  PRD.md  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs.yml  feature_request.yml
.github/workflows/: backfill.yml  ci.yml  docs.yml  publish-dataset.yml  scheduled-air-quality.yml  scheduled-dur.yml  scheduled-real-estate.yml  scheduled-tourism.yml  scheduled-weather.yml
.omc/: template-version.json
.omc/state/: hud-stdin-cache.json
.omc/state/sessions/10f49091-fe68-4ab4-9217-81cdbbc1af1f/: hud-state.json
.omc/state/sessions/cd602765-1ee8-4494-879d-069c410e4d8b/: hud-state.json
.omc/state/sessions/ee7b0fcc-d20f-4d78-9c52-e89d329f67e3/: hud-state.json
contract/: builder-api.yaml
docs/: AGENTS.md  ALGORITHM.md  API_CONTRACT.md  ARCHITECTURE.md  BOUNDARY.md  BUILD_SPEC.md  BUILD_STATE.md  DOMAIN_MODEL.md  ERROR_HANDLING.md  EXPORT_MODEL.md  FEATURE_FLOWS.md  PLAN.md  PRD.md  ROADMAP.md  api-contract.md  domain-model.md  error-handling.md  export-model.md  hf-publishing-standards.md  index.md  lessons-learned.md  publishing.md  vision.md
docs/adrs/: 0001-builder-as-orchestrator.md  0002-build-execution-model.md  0003-persistent-build-store.md  0004-plugin-exporter-contract.md  0005-api-contract-single-source.md  0006-service-auth-and-deployment.md  README.md
docs/examples/: seoul-apt-trade.md
docs/guides/: cli-usage.md  error-handling.md
docs/javascripts/: mermaid.js
examples/: README.md
scripts/: REPUBLISH_GUIDE.md  generate_fetch_params.py  generate_localdata_configs.py  publish_to_hf.py
scripts/configs/: air_quality.yaml  dur_age_taboo.yaml  dur_dosage_caution.yaml  dur_efficacy_duplication.yaml  dur_er_tablet_split_caution.yaml  dur_medication_period_caution.yaml  dur_older_adult_caution.yaml  dur_pregnancy_taboo.yaml  dur_product_info.yaml  dur_usjnt_taboo.yaml  korea_base_rate.yaml  korean_apartment_trades.yaml  seoul_apartment_rent.yaml  seoul_apartment_trades.yaml  tour_kor_area.yaml  tour_kor_festival.yaml  tour_kor_keyword.yaml  tour_kor_location.yaml  weather_ultra_srt_ncst.yaml  weather_village_fcst.yaml
scripts/configs/localdata/: animal_hospital.yaml  bakery.yaml  clinic.yaml  convenience_store.yaml  dental_clinic.yaml  fitness_center.yaml  general_accommodation.yaml  general_restaurant.yaml  hospital.yaml  pet_grooming.yaml  pharmacy.yaml  private_academy.yaml  rest_cafe.yaml  swimming_pool.yaml  tourist_accommodation.yaml
scripts/configs/templates/: localdata_template.yaml  seoul_apt_rent_template.yaml  seoul_offi_rent_template.yaml  seoul_offi_trade_template.yaml  seoul_rh_rent_template.yaml  seoul_sh_rent_template.yaml  seoul_sh_trade_template.yaml
scripts/hf_cards/: DATASET_CARD_seoul_apartment_trades.md  ORG_README.md  SETUP_AIR_QUALITY.md
scripts/pipeline/: __init__.py  fetch.py  package.py  publish.py  transform.py
scripts/reference/: seoul_district_codes.csv
specs/: weather.yaml
src/kpubdata_builder/: __init__.py  __main__.py  artifact.py  assembler.py  build.py  catalog.py  cli.py  diff.py  errors.py  executor.py  manifest.py  preview.py  snapshot.py  spec.py  validator.py
src/kpubdata_builder/exporters/: __init__.py  base.py  csv.py  huggingface.py  jsonl.py  kaggle.py  markdown.py  parquet.py  registry.py
src/kpubdata_builder/manifest/: __init__.py  environment.py  models.py  provenance.py  schema_summary.py  writer.py
src/kpubdata_builder/pipeline/: __init__.py  context.py  orchestrator.py  preview.py
src/kpubdata_builder/publishers/: __init__.py  base.py  huggingface.py  kaggle.py  local.py
src/kpubdata_builder/service/: __init__.py  app.py  http.py
src/kpubdata_builder/spec/: __init__.py  loader.py  models.py  template.py  validator.py
src/kpubdata_builder/stages/: __init__.py  _atomic.py  _path_safety.py
src/kpubdata_builder/stages/bronze/: __init__.py  build.py  models.py  persist.py
src/kpubdata_builder/stages/gold/: __init__.py  build.py  card.py  models.py  (+2 more)
src/kpubdata_builder/tabular/: __init__.py  base.py  convert.py  polars_engine.py  polars_helpers.py  types.py
staging/korean-apartment-trades/: README.md
staging/korean-apartment-trades/data/: train.parquet
staging/seoul-apartment-trades/: README.md
staging/seoul-apartment-trades/data/: train.parquet
tests/: __init__.py
tests/integration/: test_failure_modes.py  test_http_service.py  test_kpubdata_client_protocol.py  test_studio_contract.py
tests/pipeline/: test_fetch.py  test_package.py  test_publish.py  test_transform.py
tests/unit/: __init__.py  test_assembler.py  test_atomic.py  test_bronze.py  test_build_flow.py  test_catalog.py  test_cli.py  test_cli_build.py  test_cli_preview.py  test_csv_exporter.py  test_dataset_card.py  test_diff.py  test_errors.py  test_executor.py  test_exporters.py  test_gold.py  test_huggingface_exporter.py  test_jsonl_exporter.py  test_kaggle_exporter.py  test_loader.py  test_manifest.py  test_markdown_exporter.py  test_package_structure.py  test_parquet_exporter.py  test_path_safety.py  test_pipeline.py  test_plugin_exporter.py  test_preview.py  test_publish_workflow.py  test_publishers.py  test_service.py  test_service_contract.py  test_silver.py  test_snapshot.py  test_spec.py  test_split.py  test_split_frame.py  test_tabular_engine.py  test_tabular_helpers.py  test_template.py  (+1 more)
(+10 files in other folders)
