[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "kpubdata-builder"
version = "0.1.0a0"
description = "Dataset artifact pipeline for KPubData — turns normalized records into publishable outputs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Yeongseon Choe" }
]
keywords = [
  "korea", "public-data", "dataset", "pipeline", "builder", "export",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "kpubdata>=0.1.0a0",
  "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
parquet = ["pyarrow>=15,<18"]
huggingface = ["huggingface-hub>=0.23,<1"]
publish = ["polars>=1.0,<2", "huggingface-hub>=0.23,<1", "xmltodict>=0.13,<1"]
dev = [
  "build>=1.2,<2",
  "mypy>=1.10,<2",
  "pytest>=8.2,<9",
  "pytest-cov>=5,<6",
  "ruff>=0.5,<1",
  "types-PyYAML>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kpubdata_builder"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
mypy_path = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.uv.sources]
kpubdata = { path = "../kpubdata", editable = true }
