[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "kpubdata-builder"
version = "0.1.0"
description = "Dataset artifact pipeline for KPubData — turns normalized records into publishable outputs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Yeongseon Choe" }
]
keywords = [
  "korea", "public-data", "dataset", "pipeline", "builder", "export",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  # Builder depends on the 0.5.x kpubdata API (Client.dataset(...).list, etc.).
  # The old >=0.1.0a0 floor accepted any release and broke on clean installs that
  # resolved an older kpubdata; pin to the 0.5 line until a compat policy lands (#213).
  "kpubdata>=0.5.0,<0.6",
  "polars>=1.0,<2",
  "pyyaml>=6.0,<7",
  "typing_extensions>=4.5,<5",
]

[project.scripts]
kpubdata-builder = "kpubdata_builder.cli:main"

[project.optional-dependencies]
docs = [
  "mkdocs-material>=9,<10",
  "mkdocs>=1.6,<2",
]
parquet = ["pyarrow>=15,<26"]
huggingface = ["huggingface-hub>=0.23,<2"]
publish = ["huggingface-hub>=0.23,<2", "xmltodict>=0.13,<2", "kaggle>=1.6,<2"]
dev = [
  "build>=1.2,<2",
  "mypy>=1.10,<3",
  "pytest>=8.2,<10",
  "pytest-cov>=5,<8",
  "ruff>=0.5,<1",
  "types-PyYAML>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kpubdata_builder"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
mypy_path = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.uv.sources]
kpubdata = { path = "../kpubdata", editable = true }
